--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+SiwappCoreBundle:
+    resource: "@SiwappCoreBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 SiwappConfigBundle:
     resource: "@SiwappConfigBundle/Controller/"
     type:     annotation
