#3 Added AbstractInvoiceRepository, added doctrine extensions.
    - Added 'updateTotals()' method to abstractinvoicerepository.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -59,3 +59,8 @@ swiftmailer:
 jms_security_extra:
     secure_controllers:  true
     secure_all_services: false
+
+stof_doctrine_extensions:
+    orm:
+        default:
+            sluggable: true
