#12 SiwappBaseTest test class to be inherited.   also, sqlite db for testing purpses (more speed)

--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -12,3 +12,13 @@ web_profiler:
 
 swiftmailer:
     disable_delivery: true
+
+doctrine:
+    dbal:
+        driver: pdo_sqlite
+        path: :memory:
+        memory: true
+    orm:
+        auto_generate_proxy_classes: true
+        auto_mapping: true
+
