--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,6 +1,7 @@
 imports:
     - { resource: parameters.ini }
     - { resource: security.yml }
+    - { resource: @SiwappInvoiceBundle/Resources/config/services.yml }
 
 framework:
     #esi:             ~
