--- a/src/Siwapp/InvoiceBundle/DataFixtures/invoices.yml
+++ b/src/Siwapp/InvoiceBundle/DataFixtures/invoices.yml
@@ -83,7 +83,7 @@ Invoice:
     created_at: '2009-04-17 09:45:36'
     updated_at: '2009-08-25 10:27:12'
   Invoice_6:
-    draft: false
+    status: 1
     sent_by_email: false
     Serie: Serie_1
     number: 2
